clusters/homelab/apps/affine/affine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
  namespace: affine
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine:0.27.3 # {"$imagepolicy": "flux-system:affine"}
          resources:
            requests:
              cpu: 100m
              memory: 768Mi
            limits:
              memory: 2Gi
          ports:
            - name: http
              containerPort: 3010
          volumeMounts:
            - name: data
              mountPath: /root/.affine/storage
              subPath: storage
            - name: data
              mountPath: /root/.affine/config
              subPath: config
          readinessProbe:
            httpGet:
              path: /info
              port: 3010
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /info
              port: 3010
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: affine-data
