clusters/homelab/apps/affine/affine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
spec:
  type: ClusterIP
  selector:
    app: affine
  ports:
    - name: http
      port: 80
      targetPort: 3010
